k3d/manifests/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  annotations: 
    konghq.com/path: "/anything"
    konghq.com/plugins: ratelimit-httpbin,correlate-httpbin
spec:
  ports:
  - name: httpbin
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          ports:
            - containerPort: 80
