k3d/manifests/httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-route
  annotations:
    kubernetes.io/ingress.class: kong
#    konghq.com/plugins: ratelimit-httpbin,correlate-httpbin
    konghq.com/strip-path: "true"
spec:
  rules:
  - http:
      paths:
      - path: /httpbin
        pathType: Prefix
        backend:
          service:
            name: httpbin-service
            port:
              number: 80
